# AlpacaPi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CURSOR.md  Dockerfile.builder  LICENSE.md  README.md  README_NODEJS.md  RESTRUCTURE.md  SCRIPT.md  build-docker.sh  build.js  clean.js  docker-build.js  package-lock.json  package.json  setup.js  test.js
.cursor/rules/: .mdc
.github/workflows/: build-alpacapi-deb.yml  build-arm64-image.yml
alpacapi-builder/: README.md  build_arm64.sh  build_armhf.sh  common.sh  config  diagnose-performance.sh  optimize-build.sh
alpacapi-builder/alpacapi/01-install-alpacapi/: 02-run.sh
alpacapi-builder/stage-alpacapi/: 00-run.sh  EXPORT_IMAGE  prerun.sh
alpacapi-builder/stage-alpacapi/01-packages/: 00-run.sh  01-packages  02-run.sh
alpacapi-builder/stage-alpacapi/01-packages/files/: alpacapi.service  alpacapi_start.sh
alpacapi-builder/stage2/01-sys-tweaks/: 00-packages
alpacapi-builder/stage3/: 00-run.sh  EXPORT_NOOBS  prerun.sh
alpacapi-builder/stage3/01-packages/: 00-run.sh  01-packages  02-run.sh  03-run.sh
alpacapi-builder/stage3/01-packages/files/: alpacapi_start.sh
docs/: drivers.html  oldindex.html  slittracker.html
docs/integrations/topens/: README.md
drivers/atik/drivers/: README_WINDOWS_DRIVERS.txt
drivers/atik/include/: AtikCameras.h
drivers/imu/: Makefile
drivers/observatory/imu/: lis2dh12_reg.c  lis2dh12_reg.h
drivers/qsi/camera/: cameradriver_QSI.cpp
drivers/servo/: Makefile
drivers/telescope_mounts/roboclaw/: servo_move.c  servo_rc_utils.c  servo_std_defs.h  servo_write_settings.c  test_cop.c  test_cop_input.txt
drivers/touptek/camera/: cameradriver_TOUP.cpp
drivers/zwo/camera/include/: ASICamera2.h
drivers/zwo/filterwheel/include/: EFW_filter.h
drivers/zwo/focuser/include/: EAF_focuser.h
examples/: example_discover.cpp
examples/asi_demo/: main_SDK2_snap.cpp  main_SDK2_video.cpp  main_SDK2_video_mac.cpp
examples/atik_example/C++ Example/AtikCamerasSDKExample/: AtikCameras.cpp  AtikCameras.h  AtikCamerasSDKApp.cpp  AtikCamerasSDKApp.h  main.cpp
examples/atik_example/DotNetExample/DotNetExample/: Form1.Designer.cs  Form1.cs
examples/efw_demo/c/: main.cpp
examples/zwo_eaf_demo/c/: main.cpp
include/alpacapi/: alpaca_defs.h  alpacadriver.h  cameradriver.h  controller.h
pi-gen/: README_ALPACAPI.md  build-alpacapi.sh  config_alpacapi  setup-pi-gen.sh
pi-gen/docker/: Dockerfile.alpacapi  build-docker-alpacapi.sh
pi-gen/pi-gen/docker/: Dockerfile.alpacapi  build-docker-alpacapi.sh
pi-gen/pi-gen/stage-alpacapi/: 01-install-deps.sh  02-install-alpacapi.sh  03-configure.sh  04-enable-services.sh
pi-gen/stage-alpacapi/: 00-run.sh  01-install-deps.sh  02-install-alpacapi.sh  03-configure.sh
scripts/: Makefile  build_all.sh  install_everything.sh  install_libraries.sh  install_qsi.sh  setup.sh  usbquerry.sh
src/core/: HostNames.c  JsonResponse.c  NASA_moonphase.cpp  RequestData.h  alpaca_discovery.cpp  alpacadriver.cpp  alpacadriverConnect.cpp  alpacadriverLogging.cpp  alpacadriverSetup.cpp  alpacadriverThread.cpp  alpacadriver_gps.cpp  alpacadriver_helper.c  alpacadriver_helper.h  alpacadriver_templog.cpp  calibrationdriver_rpi.cpp  cameradriver_ATIK.cpp  cameradriver_gps.cpp  cameradriver_opencv.cpp  commoncolor.c  controller.cpp  controllerImageArray.cpp  controller_alpacaUnit.cpp  controller_focus_generic.cpp  controller_fw_common.cpp  controller_multicam.cpp  controller_preview.cpp  controller_startup.cpp  cpu_stats.c  discovery_lib.c  discovery_lib.h  discoverythread.c  eventlogging.c  eventlogging.h  file_utils.c  filterwheeldriver.cpp  gps_data.h  helper_functions.c  julianTime.c  linuxerrors.c  managementdriver.cpp  (+24 more)
src/net/: discoveryclient.c
src/util/: ConstellationData.c  HipparcosCatalog.c  LICENSE  MessierData.c  NGCcatalog.c  OpenNGC.c  ParseNMEA.c  README.md  SAO_stardata.c  SkyStruc.h  SkyTravelConstants.h  SkyTravelTimeRoutines.c  StarData.c  StarData.h  Statistics.c  YaleStarCatalog.c  aavso_data.c  windowtab_cpustats.cpp  windowtab_fov.cpp  windowtab_fov.h  windowtab_skytravel.cpp  windowtab_solarsystem.cpp  windowtab_starlist.cpp
src/util/examples/: main.cpp  project.ino
src/util/reference/: moonup.bas  script_moon_rise_set2.html
stage0/: prerun.sh
